#############################
# Specify the project files #
#############################

##
SET(ITMLIB_TOPLEVEL_HEADERS
ITMLib.h
)

##
SET(ITMLIB_ENGINE_SOURCES
Engine/ITMDenseMapper.cpp
Engine/ITMBasicEngine.cpp
Engine/ITMMultiEngine.cpp
Engine/ITMActiveSceneManager.cpp
Engine/ITMTrackingController.cpp
)

SET(ITMLIB_ENGINE_HEADERS
Engine/ITMDenseMapper.h
Engine/ITMIMUCalibrator.h
Engine/ITMMainEngine.h
Engine/ITMBasicEngine.h
Engine/ITMMultiEngine.h
Engine/ITMActiveSceneManager.h
Engine/ITMTrackingController.h
)

##
set(ITMLIB_ENGINE_DEVICEAGNOSTIC_HEADERS
Engine/DeviceAgnostic/ITMRepresentationAccess.h
)

##
SET(ITMLIB_LOWLEVEL_SOURCES
LowLevel/ITMLowLevelEngineFactory.cpp
)

SET(ITMLIB_LOWLEVEL_HEADERS
LowLevel/ITMLowLevelEngineFactory.h
)

##
SET(ITMLIB_LOWLEVEL_CPU_SOURCES
LowLevel/CPU/ITMLowLevelEngine_CPU.cpp
)

SET(ITMLIB_LOWLEVEL_CPU_HEADERS
LowLevel/CPU/ITMLowLevelEngine_CPU.h
)

##
SET(ITMLIB_LOWLEVEL_CUDA_SOURCES
LowLevel/CUDA/ITMLowLevelEngine_CUDA.cu
)

SET(ITMLIB_LOWLEVEL_CUDA_HEADERS
LowLevel/CUDA/ITMLowLevelEngine_CUDA.h
)

##
SET(ITMLIB_LOWLEVEL_INTERFACE_HEADERS
LowLevel/Interface/ITMLowLevelEngine.h
)

##
SET(ITMLIB_LOWLEVEL_SHARED_HEADERS
LowLevel/Shared/ITMLowLevelEngine_Shared.h
)

##
SET(ITMLIB_MESHING_BASE_HEADERS
Meshing/Base/ITMMesh.h
)

##
SET(ITMLIB_MESHING_CPU_SOURCES
Meshing/CPU/ITMMeshingEngine_CPU.cpp
)

SET(ITMLIB_MESHING_CPU_HEADERS
Meshing/CPU/ITMMeshingEngine_CPU.h
)

##
SET(ITMLIB_MESHING_CUDA_SOURCES
Meshing/CUDA/ITMMeshingEngine_CUDA.cu
)

SET(ITMLIB_MESHING_CUDA_HEADERS
Meshing/CUDA/ITMMeshingEngine_CUDA.h
)

##
SET(ITMLIB_MESHING_INTERFACE_HEADERS
Meshing/Interface/ITMMeshingEngine.h
)

##
SET(ITMLIB_MESHING_SHARED_HEADERS
Meshing/Shared/ITMMeshingEngine_Shared.h
)

##
set(ITMLIB_OBJECTS_SOURCES
Objects/ITMPose.cpp
Objects/ITMLocalScene.cpp
)

set(ITMLIB_OBJECTS_HEADERS
Objects/ITMDisparityCalib.h
Objects/ITMExtrinsics.h
Objects/ITMGlobalCache.h
Objects/ITMHashEntry.h
Objects/ITMHashSwapState.h
Objects/ITMIntrinsics.h
Objects/ITMLocalScene.h
Objects/ITMLocalVBA.h
Objects/ITMPlainVoxelArray.h
Objects/ITMPointCloud.h
Objects/ITMPose.h
Objects/ITMRGBDCalib.h
Objects/ITMScene.h
Objects/ITMSceneParams.h
Objects/ITMView.h
Objects/ITMViewIMU.h
Objects/ITMRenderState.h
Objects/ITMRenderState_VH.h
Objects/ITMVoxelBlockHash.h
Objects/ITMIMUMeasurement.h
)

##
SET(ITMLIB_RECONSTRUCTION_CPU_SOURCES
Reconstruction/CPU/ITMSceneReconstructionEngine_CPU.cpp
)

SET(ITMLIB_RECONSTRUCTION_CPU_HEADERS
Reconstruction/CPU/ITMSceneReconstructionEngine_CPU.h
)

##
SET(ITMLIB_RECONSTRUCTION_CUDA_SOURCES
Reconstruction/CUDA/ITMSceneReconstructionEngine_CUDA.cu
)

SET(ITMLIB_RECONSTRUCTION_CUDA_HEADERS
Reconstruction/CUDA/ITMSceneReconstructionEngine_CUDA.h
)

##
SET(ITMLIB_RECONSTRUCTION_INTERFACE_HEADERS
Reconstruction/Interface/ITMSceneReconstructionEngine.h
)

##
SET(ITMLIB_RECONSTRUCTION_SHARED_HEADERS
Reconstruction/Shared/ITMSceneReconstructionEngine_Shared.h
)

##
SET(ITMLIB_SWAPPING_CPU_SOURCES
Swapping/CPU/ITMSwappingEngine_CPU.cpp
)

SET(ITMLIB_SWAPPING_CPU_HEADERS
Swapping/CPU/ITMSwappingEngine_CPU.h
)

##
SET(ITMLIB_SWAPPING_CUDA_SOURCES
Swapping/CUDA/ITMSwappingEngine_CUDA.cu
)

SET(ITMLIB_SWAPPING_CUDA_HEADERS
Swapping/CUDA/ITMSwappingEngine_CUDA.h
)

##
SET(ITMLIB_SWAPPING_INTERFACE_HEADERS
Swapping/Interface/ITMSwappingEngine.h
)

##
SET(ITMLIB_SWAPPING_SHARED_HEADERS
Swapping/Shared/ITMSwappingEngine_Shared.h
)

##
SET(ITMLIB_TRACKERS_SOURCES
Trackers/ITMTrackerFactory.cpp
)

SET(ITMLIB_TRACKERS_HEADERS
Trackers/ITMTrackerFactory.h
)

##
SET(ITMLIB_TRACKERS_BASE_HEADERS
Trackers/Base/ITMImageHierarchy.h
Trackers/Base/ITMSceneHierarchyLevel.h
Trackers/Base/ITMTemplatedHierarchyLevel.h
Trackers/Base/ITMTrackingState.h
Trackers/Base/ITMViewHierarchyLevel.h
Trackers/Base/TrackerIterationType.h
)

##
SET(ITMLIB_TRACKERS_CPU_SOURCES
Trackers/CPU/ITMColorTracker_CPU.cpp
Trackers/CPU/ITMDepthTracker_CPU.cpp
Trackers/CPU/ITMRenTracker_CPU.cpp
Trackers/CPU/ITMWeightedICPTracker_CPU.cpp
)

SET(ITMLIB_TRACKERS_CPU_HEADERS
Trackers/CPU/ITMColorTracker_CPU.h
Trackers/CPU/ITMDepthTracker_CPU.h
Trackers/CPU/ITMRenTracker_CPU.h
Trackers/CPU/ITMWeightedICPTracker_CPU.h
)

##
SET(ITMLIB_TRACKERS_CUDA_SOURCES
Trackers/CUDA/ITMColorTracker_CUDA.cu
Trackers/CUDA/ITMDepthTracker_CUDA.cu
Trackers/CUDA/ITMRenTracker_CUDA.cu
Trackers/CUDA/ITMWeightedICPTracker_CUDA.cu
)

SET(ITMLIB_TRACKERS_CUDA_HEADERS
Trackers/CUDA/ITMColorTracker_CUDA.h
Trackers/CUDA/ITMDepthTracker_CUDA.h
Trackers/CUDA/ITMRenTracker_CUDA.h
Trackers/CUDA/ITMWeightedICPTracker_CUDA.h
)

##
SET(ITMLIB_TRACKERS_INTERFACE_SOURCES
Trackers/Interface/ITMColorTracker.cpp
Trackers/Interface/ITMDepthTracker.cpp
Trackers/Interface/ITMIMUTracker.cpp
Trackers/Interface/ITMRenTracker.cpp
Trackers/Interface/ITMWeightedICPTracker.cpp
)

SET(ITMLIB_TRACKERS_INTERFACE_HEADERS
Trackers/Interface/ITMColorTracker.h
Trackers/Interface/ITMCompositeTracker.h
Trackers/Interface/ITMDepthTracker.h
Trackers/Interface/ITMIMUTracker.h
Trackers/Interface/ITMRenTracker.h
Trackers/Interface/ITMTracker.h
Trackers/Interface/ITMWeightedICPTracker.h
)

##
SET(ITMLIB_TRACKERS_SHARED_HEADERS
Trackers/Shared/ITMColorTracker_Shared.h
Trackers/Shared/ITMDepthTracker_Shared.h
Trackers/Shared/ITMRenTracker_Shared.h
Trackers/Shared/ITMWeightedICPTracker_Shared.h
)

##
SET(ITMLIB_UTILS_SOURCES
Utils/ITMCalibIO.cpp
Utils/ITMLibSettings.cpp
)

SET(ITMLIB_UTILS_HEADERS
Utils/ITMCalibIO.h
Utils/ITMCUDAUtils.h
Utils/ITMLibDefines.h
Utils/ITMLibSettings.h
Utils/ITMMath.h
Utils/ITMPixelUtils.h
Utils/ITMVoxelTypes.h
)

##
SET(ITMLIB_VIEWBUILDING_SOURCES
ViewBuilding/ITMViewBuilderFactory.cpp
)

SET(ITMLIB_VIEWBUILDING_HEADERS
ViewBuilding/ITMViewBuilderFactory.h
)

##
SET(ITMLIB_VIEWBUILDING_CPU_SOURCES
ViewBuilding/CPU/ITMViewBuilder_CPU.cpp
)

SET(ITMLIB_VIEWBUILDING_CPU_HEADERS
ViewBuilding/CPU/ITMViewBuilder_CPU.h
)

##
SET(ITMLIB_VIEWBUILDING_CUDA_SOURCES
ViewBuilding/CUDA/ITMViewBuilder_CUDA.cu
)

SET(ITMLIB_VIEWBUILDING_CUDA_HEADERS
ViewBuilding/CUDA/ITMViewBuilder_CUDA.h
)

##
SET(ITMLIB_VIEWBUILDING_INTERFACE_HEADERS
ViewBuilding/Interface/ITMViewBuilder.h
)

##
SET(ITMLIB_VIEWBUILDING_SHARED_HEADERS
ViewBuilding/Shared/ITMViewBuilder_Shared.h
)

##
SET(ITMLIB_VISUALISATION_HEADERS
Visualisation/ITMVisualisationEngineFactory.h
)

##
SET(ITMLIB_VISUALISATION_CPU_SOURCES
Visualisation/CPU/ITMVisualisationEngine_CPU.cpp
)

SET(ITMLIB_VISUALISATION_CPU_HEADERS
Visualisation/CPU/ITMVisualisationEngine_CPU.h
)

##
SET(ITMLIB_VISUALISATION_CUDA_SOURCES
Visualisation/CUDA/ITMVisualisationEngine_CUDA.cu
)

SET(ITMLIB_VISUALISATION_CUDA_HEADERS
Visualisation/CUDA/ITMVisualisationEngine_CUDA.h
)

##
SET(ITMLIB_VISUALISATION_INTERFACE_SOURCES
Visualisation/Interface/ITMVisualisationEngine.cpp
)

SET(ITMLIB_VISUALISATION_INTERFACE_HEADERS
Visualisation/Interface/ITMVisualisationEngine.h
)

##
SET(ITMLIB_VISUALISATION_SHARED_HEADERS
Visualisation/Shared/ITMVisualisationEngine_Shared.h
)

#################################################################
# Collect the project files into common, CPU-only and CUDA-only #
#################################################################

set(ITMLIB_COMMON_OBJECTS
${ITMLIB_TOPLEVEL_HEADERS}
${ITMLIB_ENGINE_SOURCES}
${ITMLIB_ENGINE_HEADERS}
${ITMLIB_ENGINE_DEVICEAGNOSTIC_HEADERS}
${ITMLIB_LOWLEVEL_INTERFACE_HEADERS}
${ITMLIB_LOWLEVEL_SHARED_HEADERS}
${ITMLIB_MESHING_BASE_HEADERS}
${ITMLIB_MESHING_INTERFACE_HEADERS}
${ITMLIB_MESHING_SHARED_HEADERS}
${ITMLIB_OBJECTS_SOURCES}
${ITMLIB_OBJECTS_HEADERS}
${ITMLIB_RECONSTRUCTION_INTERFACE_HEADERS}
${ITMLIB_RECONSTRUCTION_SHARED_HEADERS}
${ITMLIB_SWAPPING_INTERFACE_HEADERS}
${ITMLIB_SWAPPING_SHARED_HEADERS}
${ITMLIB_TRACKERS_SOURCES}
${ITMLIB_TRACKERS_HEADERS}
${ITMLIB_TRACKERS_BASE_HEADERS}
${ITMLIB_TRACKERS_INTERFACE_SOURCES}
${ITMLIB_TRACKERS_INTERFACE_HEADERS}
${ITMLIB_TRACKERS_SHARED_HEADERS}
${ITMLIB_UTILS_SOURCES}
${ITMLIB_UTILS_HEADERS}
${ITMLIB_VIEWBUILDING_INTERFACE_HEADERS}
${ITMLIB_VIEWBUILDING_SHARED_HEADERS}
${ITMLIB_VISUALISATION_HEADERS}
${ITMLIB_VISUALISATION_INTERFACE_SOURCES}
${ITMLIB_VISUALISATION_INTERFACE_HEADERS}
${ITMLIB_VISUALISATION_SHARED_HEADERS}
)

set(ITMLIB_CPU_OBJECTS
${ITMLIB_LOWLEVEL_SOURCES}
${ITMLIB_LOWLEVEL_HEADERS}
${ITMLIB_LOWLEVEL_CPU_SOURCES}
${ITMLIB_LOWLEVEL_CPU_HEADERS}
${ITMLIB_MESHING_CPU_SOURCES}
${ITMLIB_MESHING_CPU_HEADERS}
${ITMLIB_RECONSTRUCTION_CPU_SOURCES}
${ITMLIB_RECONSTRUCTION_CPU_HEADERS}
${ITMLIB_SWAPPING_CPU_SOURCES}
${ITMLIB_SWAPPING_CPU_HEADERS}
${ITMLIB_TRACKERS_CPU_SOURCES}
${ITMLIB_TRACKERS_CPU_HEADERS}
${ITMLIB_VIEWBUILDING_SOURCES}
${ITMLIB_VIEWBUILDING_HEADERS}
${ITMLIB_VIEWBUILDING_CPU_SOURCES}
${ITMLIB_VIEWBUILDING_CPU_HEADERS}
${ITMLIB_VISUALISATION_CPU_SOURCES}
${ITMLIB_VISUALISATION_CPU_HEADERS}
)

set(ITMLIB_CUDA_OBJECTS
${ITMLIB_LOWLEVEL_CUDA_SOURCES}
${ITMLIB_LOWLEVEL_CUDA_HEADERS}
${ITMLIB_MESHING_CUDA_SOURCES}
${ITMLIB_MESHING_CUDA_HEADERS}
${ITMLIB_RECONSTRUCTION_CUDA_SOURCES}
${ITMLIB_RECONSTRUCTION_CUDA_HEADERS}
${ITMLIB_SWAPPING_CUDA_SOURCES}
${ITMLIB_SWAPPING_CUDA_HEADERS}
${ITMLIB_TRACKERS_CUDA_SOURCES}
${ITMLIB_TRACKERS_CUDA_HEADERS}
${ITMLIB_VIEWBUILDING_CUDA_SOURCES}
${ITMLIB_VIEWBUILDING_CUDA_HEADERS}
${ITMLIB_VISUALISATION_CUDA_SOURCES}
${ITMLIB_VISUALISATION_CUDA_HEADERS}
)

#############################
# Specify the source groups #
#############################

SOURCE_GROUP("" FILES ${ITMLIB_TOPLEVEL_HEADERS})
SOURCE_GROUP(Engine FILES ${ITMLIB_ENGINE_SOURCES} ${ITMLIB_ENGINE_HEADERS})
SOURCE_GROUP(Engine\\DeviceAgnostic FILES ${ITMLIB_ENGINE_DEVICEAGNOSTIC_HEADERS})
SOURCE_GROUP(LowLevel FILES ${ITMLIB_LOWLEVEL_SOURCES} ${ITMLIB_LOWLEVEL_HEADERS})
SOURCE_GROUP(LowLevel\\CPU FILES ${ITMLIB_LOWLEVEL_CPU_SOURCES} ${ITMLIB_LOWLEVEL_CPU_HEADERS})
SOURCE_GROUP(LowLevel\\CUDA FILES ${ITMLIB_LOWLEVEL_CUDA_SOURCES} ${ITMLIB_LOWLEVEL_CUDA_HEADERS})
SOURCE_GROUP(LowLevel\\Interface FILES ${ITMLIB_LOWLEVEL_INTERFACE_HEADERS})
SOURCE_GROUP(LowLevel\\Shared FILES ${ITMLIB_LOWLEVEL_SHARED_HEADERS})
SOURCE_GROUP(Meshing\\Base FILES ${ITMLIB_MESHING_BASE_HEADERS})
SOURCE_GROUP(Meshing\\CPU FILES ${ITMLIB_MESHING_CPU_SOURCES} ${ITMLIB_MESHING_CPU_HEADERS})
SOURCE_GROUP(Meshing\\CUDA FILES ${ITMLIB_MESHING_CUDA_SOURCES} ${ITMLIB_MESHING_CUDA_HEADERS})
SOURCE_GROUP(Meshing\\Interface FILES ${ITMLIB_MESHING_INTERFACE_HEADERS})
SOURCE_GROUP(Meshing\\Shared FILES ${ITMLIB_MESHING_SHARED_HEADERS})
SOURCE_GROUP(Objects FILES ${ITMLIB_OBJECTS_SOURCES} ${ITMLIB_OBJECTS_HEADERS})
SOURCE_GROUP(Reconstruction\\CPU FILES ${ITMLIB_RECONSTRUCTION_CPU_SOURCES} ${ITMLIB_RECONSTRUCTION_CPU_HEADERS})
SOURCE_GROUP(Reconstruction\\CUDA FILES ${ITMLIB_RECONSTRUCTION_CUDA_SOURCES} ${ITMLIB_RECONSTRUCTION_CUDA_HEADERS})
SOURCE_GROUP(Reconstruction\\Interface FILES ${ITMLIB_RECONSTRUCTION_INTERFACE_HEADERS})
SOURCE_GROUP(Reconstruction\\Shared FILES ${ITMLIB_RECONSTRUCTION_SHARED_HEADERS})
SOURCE_GROUP(Swapping\\CPU FILES ${ITMLIB_SWAPPING_CPU_SOURCES} ${ITMLIB_SWAPPING_CPU_HEADERS})
SOURCE_GROUP(Swapping\\CUDA FILES ${ITMLIB_SWAPPING_CUDA_SOURCES} ${ITMLIB_SWAPPING_CUDA_HEADERS})
SOURCE_GROUP(Swapping\\Interface FILES ${ITMLIB_SWAPPING_INTERFACE_HEADERS})
SOURCE_GROUP(Swapping\\Shared FILES ${ITMLIB_SWAPPING_SHARED_HEADERS})
SOURCE_GROUP(Trackers FILES ${ITMLIB_TRACKERS_SOURCES} ${ITMLIB_TRACKERS_HEADERS})
SOURCE_GROUP(Trackers\\Base FILES ${ITMLIB_TRACKERS_BASE_HEADERS})
SOURCE_GROUP(Trackers\\CPU FILES ${ITMLIB_TRACKERS_CPU_SOURCES} ${ITMLIB_TRACKERS_CPU_HEADERS})
SOURCE_GROUP(Trackers\\CUDA FILES ${ITMLIB_TRACKERS_CUDA_SOURCES} ${ITMLIB_TRACKERS_CUDA_HEADERS})
SOURCE_GROUP(Trackers\\Interface FILES ${ITMLIB_TRACKERS_INTERFACE_SOURCES} ${ITMLIB_TRACKERS_INTERFACE_HEADERS})
SOURCE_GROUP(Trackers\\Shared FILES ${ITMLIB_TRACKERS_SHARED_HEADERS})
SOURCE_GROUP(Utils FILES ${ITMLIB_UTILS_SOURCES} ${ITMLIB_UTILS_HEADERS})
SOURCE_GROUP(ViewBuilding FILES ${ITMLIB_VIEWBUILDING_SOURCES} ${ITMLIB_VIEWBUILDING_HEADERS})
SOURCE_GROUP(ViewBuilding\\CPU FILES ${ITMLIB_VIEWBUILDING_CPU_SOURCES} ${ITMLIB_VIEWBUILDING_CPU_HEADERS})
SOURCE_GROUP(ViewBuilding\\CUDA FILES ${ITMLIB_VIEWBUILDING_CUDA_SOURCES} ${ITMLIB_VIEWBUILDING_CUDA_HEADERS})
SOURCE_GROUP(ViewBuilding\\Interface FILES ${ITMLIB_VIEWBUILDING_INTERFACE_HEADERS})
SOURCE_GROUP(ViewBuilding\\Shared FILES ${ITMLIB_VIEWBUILDING_SHARED_HEADERS})
SOURCE_GROUP(Visualisation FILES ${ITMLIB_VISUALISATION_HEADERS})
SOURCE_GROUP(Visualisation\\CPU FILES ${ITMLIB_VISUALISATION_CPU_SOURCES} ${ITMLIB_VISUALISATION_CPU_HEADERS})
SOURCE_GROUP(Visualisation\\CUDA FILES ${ITMLIB_VISUALISATION_CUDA_SOURCES} ${ITMLIB_VISUALISATION_CUDA_HEADERS})
SOURCE_GROUP(Visualisation\\Interface FILES ${ITMLIB_VISUALISATION_INTERFACE_SOURCES} ${ITMLIB_VISUALISATION_INTERFACE_HEADERS})
SOURCE_GROUP(Visualisation\\Shared FILES ${ITMLIB_VISUALISATION_SHARED_HEADERS})

##############################################################
# Specify the include directories, target and link libraries #
##############################################################

if(WITH_CUDA)
  if(NOT DEFINED CUDA_COMPUTE_CAPABILITY)
    include(${PROJECT_SOURCE_DIR}/cmake/CUDACheckCompute.cmake)
  endif()
  set(CUDA_ARCH ${CUDA_COMPUTE_CAPABILITY} CACHE STRING "CUDA architectures to compile for")
  string(REPLACE " " ";" CUDA_ARCH_LIST ${CUDA_ARCH})
  foreach(a ${CUDA_ARCH_LIST})
    set(CUDA_ARCH_OPTIONS "${CUDA_ARCH_OPTIONS} -gencode arch=compute_${a},code=compute_${a}")
  endforeach()
  include_directories(${CUDA_INCLUDE_DIRS})
  cuda_add_library(ITMLib
	${ITMLIB_CPU_OBJECTS}
	${ITMLIB_CUDA_OBJECTS}
	${ITMLIB_COMMON_OBJECTS}
	OPTIONS "${CUDA_ARCH_OPTIONS} --use_fast_math")
  target_link_libraries(ITMLib ${CUDA_LIBRARY})
else()
  add_definitions(-DCOMPILE_WITHOUT_CUDA)
  add_library(ITMLib ${ITMLIB_CPU_OBJECTS} ${ITMLIB_COMMON_OBJECTS})
endif()

target_link_libraries(ITMLib Utils)
target_link_libraries(ITMLib LCDLib)
